FullQa New/src/objects/Partner_Total_Value_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Recurring_Returns_Revenue_Y2__c</fullName>
        <formula>Returns_per_Customer_Y2__c *   Price_per_Return_Y2__c * Cumulative_Returns_Customers_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Returns Revenue Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Returns_Revenue_Y3__c</fullName>
        <formula>Returns_per_Customer_Y3__c *   Price_per_Return_Y3__c *  Cumulative_Returns_Customers_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Returns Revenue Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Returns_Revenue_Y5_Stamp__c</fullName>
        <label>Recurring Returns Revenue Y5 Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Returns_Revenue_Y1__c</fullName>
        <formula>New_Returns_Customers_Y1__c*  Price_per_Return_Y1__c *  Returns_per_Customer_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returns Revenue Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Returns_Revenue_Y2__c</fullName>
        <formula>Returns_per_Customer_Y2__c *  New_Returns_Customers_Y2__c *  Price_per_Return_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returns Revenue Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Returns_Revenue_Y3__c</fullName>
        <formula>Returns_per_Customer_Y3__c *  Price_per_Return_Y3__c *  New_Returns_Customers_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returns Revenue Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Returns_per_Customer_Y1__c</fullName>
        <label># Returns per Customer Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returns_per_Customer_Y2__c</fullName>
        <label># Returns per Customer Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returns_per_Customer_Y3__c</fullName>
        <label># Returns per Customer Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SICTotalASP__c</fullName>
        <formula>SIC_Code_Total_Revenue__c  / SIC_Code_Client_Count_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Total ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Client_Count_Total__c</fullName>
        <formula>SIC_Code_Tier_1_Count__c + SIC_Code_Tier_2_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Client Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_1_Client_ASP__c</fullName>
        <label>SIC Code Tier 1 Client ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_1_Client_Revenue__c</fullName>
        <formula>SIC_Code_Tier_1_Count__c *  SIC_Code_Tier_1_Client_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Tier 1 Client Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_1_Commissions_Y1__c</fullName>
        <formula>Year_1_Commission_Rate__c *  SIC_Code_Tier_1_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Tier 1 Commissions Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_1_Commissions_Y2__c</fullName>
        <formula>Recurring_Commission_Rate__c *  Number_of_Years__c *  SIC_Code_Tier_1_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Tier 1 Commissions Recurring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_1_Count__c</fullName>
        <description>5-50 States</description>
        <inlineHelpText>5-50 States</inlineHelpText>
        <label>SIC Code Tier 1 Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_2_Client_ASP__c</fullName>
        <label>SIC Code Tier 2 Client ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_2_Client_Revenue__c</fullName>
        <formula>SIC_Code_Tier_2_Count__c *  SIC_Code_Tier_2_Client_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Tier 2 Client Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_2_Commissions_Y1__c</fullName>
        <formula>Year_1_Commission_Rate__c *  SIC_Code_Tier_2_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Tier 2 Commissions Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Tier_2_Count__c</fullName>
        <inlineHelpText>1-5 States</inlineHelpText>
        <label>SIC Code Tier 2 Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Total_Revenue__c</fullName>
        <formula>SIC_Code_Tier_1_Client_Revenue__c + SIC_Code_Tier_2_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Total_Y1_Commissions__c</fullName>
        <formula>SIC_Code_Tier_1_Commissions_Y1__c + SIC_Code_Tier_2_Commissions_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Total Year 1 Commissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Total_Y2_Commissions__c</fullName>
        <formula>SIC_Code_Tier_1_Commissions_Y2__c + SIC_Code_Tier_2_Commissions_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Total Recurring Commissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSTotalASP__c</fullName>
        <formula>SS_Total_Revenue__c  / SS_Client_Count_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Total ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Client_Count_Total__c</fullName>
        <formula>SS_Tier_1_Client_Count__c + SS_Tier_2_Client_Count__c + SS_Tier_3_Client_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Client Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_Tier_1_Client_ASP__c</fullName>
        <label>SS Tier 1 Client ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Tier_1_Client_Count__c</fullName>
        <inlineHelpText>AL, CA, CO, LA, MN, NY, TX, WA</inlineHelpText>
        <label>SS Tier 1 Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_Tier_1_Client_Revenue__c</fullName>
        <formula>SS_Tier_1_Client_Count__c *  SS_Tier_1_Client_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Tier 1 Client Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Tier_1_Commissions_Y1__c</fullName>
        <formula>Year_1_Commission_Rate__c *  SS_Tier_1_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Tier 1 Commissions Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Tier_1_Commissions_Y2__c</fullName>
        <formula>Recurring_Commission_Rate__c *  Number_of_Years__c *  SS_Tier_1_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Tier 1 Commissions Recurring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Tier_2_Client_ASP__c</fullName>
        <label>SS Tier 2 Client ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Tier_2_Client_Count__c</fullName>
        <inlineHelpText>AZ, AR, CT, DC, FL, GA, HI, ID, IL, IN, IA, KS, KY, ME, MD, MI, MS, MO, NE, NJ, NM, NC, ND, OH, OK, PA, RI, SC, SD, UT, VT, VA, WV, WI, WY</inlineHelpText>
        <label>SS Tier 2 Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_Tier_2_Client_Revenue__c</fullName>
        <formula>SS_Tier_2_Client_Count__c *  SS_Tier_2_Client_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Tier 2 Client Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Tier_2_Commissions_Y1__c</fullName>
        <formula>Year_1_Commission_Rate__c *  SS_Tier_2_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Tier 2 Commissions Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Tier_3_Client_ASP__c</fullName>
        <label>SS Tier 3 Client ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Tier_3_Client_Count__c</fullName>
        <inlineHelpText>OR, AK, NH, MT, DE</inlineHelpText>
        <label>SS Tier 3 Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_Tier_3_Client_Revenue__c</fullName>
        <formula>SS_Tier_3_Client_Count__c *  SS_Tier_3_Client_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Tier 3 Client Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Total_Revenue__c</fullName>
        <formula>SS_Tier_1_Client_Revenue__c + SS_Tier_2_Client_Revenue__c +  SS_Tier_3_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Total_Y1_Commissions__c</fullName>
        <formula>SS_Tier_1_Commissions_Y1__c + SS_Tier_2_Commissions_Y1__c + SS_Tier_3_Commissions_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Total Year 1 Commissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Total_Y2_Commissions__c</fullName>
        <formula>SS_Tier_1_Commissions_Y2__c + SS_Tier_2_Commissions_Y2__c + SS_Tier_3_Commissions_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Total Recurring Commissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalASP__c</fullName>
        <formula>ClientRevenueTotal__c / Partner_Total_Client_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Addressable_Market_Y1__c</fullName>
        <label>Total Addressable Market Y1</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Addressable_Market_Y2__c</fullName>
        <label>Total Addressable Market Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Addressable_Market_Y3__c</fullName>
        <label>Total Addressable Market Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Commissions_Y1__c</fullName>
        <formula>New_Commissions_Y1__c +  Recurring_Commissions_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Annual Commissions Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Commissions_Y2__c</fullName>
        <formula>New_Commissions_Y2__c +  Recurring_Commissions_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Annual Commissions Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Commissions_Y3__c</fullName>
        <formula>New_Commissions_Y3__c +  Recurring_Commissions_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Annual Commissions Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Y1__c</fullName>
        <formula>Total_Development_Cost_Y1__c + Total_Training_Cost_Y1__c + Total_Marketing_Cost_Y1__c + Total_Sales_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Y2__c</fullName>
        <formula>Total_Development_Cost_Y2__c + Total_Training_Cost_Y2__c + Total_Marketing_Cost_Y2__c + Total_Sales_Cost_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Y3__c</fullName>
        <formula>Total_Development_Cost_Y3__c + Total_Training_Cost_Y3__c + Total_Marketing_Cost_Y3__c + Total_Sales_Cost_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cumulative_Commissions_Y1__c</fullName>
        <formula>Total_Annual_Commissions_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cumulative Commissions Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cumulative_Commissions_Y2__c</fullName>
        <formula>Total_Annual_Commissions_Y2__c +  Total_Cumulative_Commissions_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cumulative Commissions Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cumulative_Commissions_Y3__c</fullName>
        <formula>Total_Annual_Commissions_Y3__c +  Total_Cumulative_Commissions_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cumulative Commissions Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Development_Cost_Y1__c</fullName>
        <formula>Initial_Development_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Development Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Development_Cost_Y2__c</fullName>
        <formula>Ongoing_Development_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Development Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Development_Cost_Y3__c</fullName>
        <formula>Ongoing_Development_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Development Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Cost_Y1__c</fullName>
        <formula>( of_Marketing_Activities_Y1__c * of_Hours_per_Marketing_Activity_Y1__c * Cost_Per_Marketing_Hour_Y1__c ) + Other_Marketing_Costs_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Cost_Y2__c</fullName>
        <formula>( of_Marketing_Activities_Y2__c * of_Hours_per_Marketing_Activity_Y2__c * Cost_Per_Marketing_Hour_Y2__c ) + Other_Marketing_Costs_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Cost_Y3__c</fullName>
        <formula>( of_Marketing_Activities_Y3__c * of_Hours_per_Marketing_Activity_Y3__c * Cost_Per_Marketing_Hour_Y3__c ) + Other_Marketing_Costs_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_New_Revenue_Y1__c</fullName>
        <formula>Calc_Revenue_Y1__c +  Returns_Revenue_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total New Revenue Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_New_Revenue_Y2__c</fullName>
        <formula>Calc_Revenue_Y2__c +  Returns_Revenue_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total New Revenue Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_New_Revenue_Y3__c</fullName>
        <formula>Calc_Revenue_Y3__c +  Returns_Revenue_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total New Revenue Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recurring_Revenue_Y1__c</fullName>
        <formula>Recurring_Calc_Revenue_Y1__c +   Recurring_Returns_Revenue_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recurring Revenue Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recurring_Revenue_Y2__c</fullName>
        <formula>Recurring_Calc_Revenue_Y2__c +   Recurring_Returns_Revenue_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recurring Revenue Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recurring_Revenue_Y3__c</fullName>
        <formula>Recurring_Calc_Revenue_Y3__c +   Recurring_Returns_Revenue_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recurring Revenue Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Cost_Y1__c</fullName>
        <formula>ROUND( Number_of_Prospect_Conversations_Y1__c *  Hours_Spent_Qualifying_Each_Prospect_Y1__c * Cost_Per_Sales_Hour_Y1__c / 60 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Cost_Y2__c</fullName>
        <formula>ROUND( Number_of_Prospect_Conversations_Y2__c *  Hours_Spent_Qualifying_Each_Prospect_Y2__c * Cost_Per_Sales_Hour_Y2__c / 60 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Cost_Y3__c</fullName>
        <formula>ROUND( Number_of_Prospect_Conversations_Y3__c *  Hours_Spent_Qualifying_Each_Prospect_Y3__c * Cost_Per_Sales_Hour_Y3__c /60 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Training_Cost_Y1__c</fullName>
        <formula>Number_of_Sales_Reps_Y1__c * Number_of_Training_Hours_Y1__c * Cost_Per_Hour_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Training Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Training_Cost_Y2__c</fullName>
        <formula>Number_of_Sales_Reps_Y2__c * Number_of_Training_Hours_Y2__c * Cost_Per_Hour_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Training Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Training_Cost_Y3__c</fullName>
        <formula>Number_of_Sales_Reps_Y3__c * Number_of_Training_Hours_Y3__c * Cost_Per_Hour_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Training Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Commission_Rate__c</fullName>
        <label>Year 1 Commission Rate (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Hours_per_Marketing_Activity_Y1__c</fullName>
        <label># of Hours per Marketing Activity Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Hours_per_Marketing_Activity_Y2__c</fullName>
        <label># of Hours per Marketing Activity Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Hours_per_Marketing_Activity_Y3__c</fullName>
        <label># of Hours per Marketing Activity Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Marketing_Activities_Y1__c</fullName>
        <label># of Marketing Activities Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Marketing_Activities_Y2__c</fullName>
        <label># of Marketing Activities Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Marketing_Activities_Y3__c</fullName>
        <label># of Marketing Activities Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_TAM_Y1_Calc__c</fullName>
        <label>% of TAM Y1 (Calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_TAM_Y1__c</fullName>
        <label>% of TAM Y1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_TAM_Y2_Calc__c</fullName>
        <label>% of TAM Y2 (Calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_TAM_Y2__c</fullName>
        <label>% of TAM Y2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_TAM_Y3_Calc__c</fullName>
        <label>% of TAM Y3 (Calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_TAM_Y3__c</fullName>
        <label>% of TAM Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Partner Revenue Analysis</label>
    <nameField>
        <label>Partner Total Value Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Revenue Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>